# python-intro

./: .gitignore  .gitmodules  pyproject.toml
projekt/: main.cl  main.cpp  main.pro
zadanie_1/: zadanie_1.py
zadanie_2/: app.py  test_app.py
zadanie_2/coverage/: __init___py.html  app_py.html  class_index.html  function_index.html  index.html  status.json  test_app_py.html
zadanie_4/: lab-4.md  main.py
zadanie_5/: lab-5.md
zadanie_5/src/: example-kr8s.py  example-kubernetes-asyncio.py  example-kubernetes.py  example-lightkube.py
