[project]
name = "python-intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pymcdm>=1.3.1",
]

[dependency-groups]
dev = [
    "coverage>=7.7.0",
    "parameterized>=0.9.0",
    "ruff>=0.11.0",
]
